update favIcon and metaData

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yuri Leonel Developer</title>
+    <meta name="description" content="Connect with me via social links and show programming skills!" />
+    <meta name="author" content="Yuri Leonel">
+    <link rel="icon" type="image/x-icon" href="/icon.png">
+    <title>Yuri Leonel | LinkTree</title>
   </head>
   <body>
     <div id="root"></div>
