--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Connect with me via social links and show programming skills!" />
+    <meta name="description" content="Connect with me via social links" />
     <meta name="author" content="Yuri Leonel">
     <link rel="icon" type="image/x-icon" href="/icon.png">
     <title>Yuri Leonel | LinkTree</title>
